spacing fixing

--- a/src/_styles/main.scss
+++ b/src/_styles/main.scss
@@ -510,8 +510,7 @@ body {
   }
 
   .h2 {
-    font-size: 4vw;
-    max-width: 10vw;
+    font-size: 3.2vw;
   }
 
   .h3 {
@@ -520,8 +519,8 @@ body {
   }
 
   .h4 {
-    font-size: 2.5vw;
-    margin: 1vw 0;
+    font-size: 2.4vw;
+    margin: 2vw 0 1vw 0;
   }
 
   .h5 {
